--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,7 @@ windows = { version = "0.61.3", features = [
     "Win32_Networking_WinSock",
 ] }
 clap = { version = "4.5.40", features = ["derive", "env"] }
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full"] }
+tempfile = "3.8"
